--- a/belajar web.html
+++ b/belajar web.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>belajar membuat paragraf</title>
+	<title>loketwatukarung123.github.io</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -13,4 +13,5 @@
     HUT RI 80
   </video>
 </body>
+
 </html>
