--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>belajar membuat paragraf</title>
+	<title>loketwatukarung123.github.io</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
@@ -15,3 +15,4 @@
 </body>
 
 </html>
+
